--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
+    "react-icons": "^5.4.0",
+    "use-interval": "^1.4.0",
     "web-vitals": "^5.1.0"
   },
   "scripts": {
