--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "react": "^19.2.3",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
-    "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.5",
     "use-interval": "^1.4.0",
     "web-vitals": "^5.1.0"
   },
