--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios-progress-bar": "^1.2.0",
     "bootstrap": "^5.3.8",
     "codegen": "^0.1.0",
+    "moment": "^2.30.1",
     "nodejs": "^0.0.0",
     "react": "^19.2.3",
     "react-bootstrap": "^2.10.10",
